compiler/parser.output
Terminals unused in grammar

   INCLUDE
   SUSTENIDO
   IMAGINARY
   ELLIPSIS
   COMPLEX


State 368 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | in_statement
    3                   | out_statement
    4                   | CONSTANT
    5                   | STRING_LITERAL
    6                   | ABRE_PARENTESES expression FECHA_PARENTESES
    7                   | IDENTIFIER ABRE_PARENTESES FECHA_PARENTESES
    8                   | IDENTIFIER ABRE_PARENTESES argument_expression_list FECHA_PARENTESES
    9                   | IDENTIFIER ABRE_COLCHETES expression FECHA_COLCHETES
   10                   | IDENTIFIER ABRE_COLCHETES expression FECHA_COLCHETES ABRE_COLCHETES expression FECHA_COLCHETES

   11 postfix_expression: primary_expression
   12                   | postfix_expression PONTO IDENTIFIER
   13                   | postfix_expression MAIS_MAIS
   14                   | postfix_expression MENOS_MENOS
   15                   | ABRE_PARENTESES type_name FECHA_PARENTESES ABRE_CHAVES initializer_list FECHA_CHAVES

   16 argument_expression_list: assignment_expression
   17                         | argument_expression_list VIRGULA assignment_expression

   18 unary_expression: postfix_expression
   19                 | MAIS_MAIS unary_expression
   20                 | MENOS_MENOS unary_expression
   21                 | unary_operator cast_expression
   22                 | SIZEOF unary_expression
   23                 | SIZEOF ABRE_PARENTESES type_name FECHA_PARENTESES

   24 unary_operator: AMPERSAND
   25               | ASTERISCO
   26               | MAIS
   27               | MENOS
   28               | TIL
   29               | EXCLAMACAO

   30 cast_expression: unary_expression
   31                | ABRE_PARENTESES type_name FECHA_PARENTESES cast_expression

   32 multiplicative_expression: cast_expression
   33                          | multiplicative_expression ASTERISCO cast_expression
   34                          | multiplicative_expression BARRA cast_expression
   35                          | multiplicative_expression PORCENTAGEM cast_expression

   36 additive_expression: multiplicative_expression
   37                    | additive_expression MAIS multiplicative_expression
   38                    | additive_expression MENOS multiplicative_expression

   39 shift_expression: additive_expression
   40                 | shift_expression MENOR_MENOR additive_expression
   41                 | shift_expression MAIOR_MAIOR additive_expression

   42 relational_expression: shift_expression
   43                      | relational_expression MENOR shift_expression
   44                      | relational_expression MAIOR shift_expression
   45                      | relational_expression MENOR_IGUAL shift_expression
   46                      | relational_expression MAIOR_IGUAL shift_expression

   47 equality_expression: relational_expression
   48                    | equality_expression IGUAL_IGUAL relational_expression
   49                    | equality_expression EXCLAMACAO_IGUAL relational_expression

   50 and_expression: equality_expression
   51               | and_expression AMPERSAND equality_expression

   52 exclusive_or_expression: and_expression
   53                        | exclusive_or_expression CIRCUNFLEXO and_expression

   54 inclusive_or_expression: exclusive_or_expression
   55                        | inclusive_or_expression PIPE exclusive_or_expression

   56 logical_and_expression: inclusive_or_expression
   57                       | logical_and_expression AMPERSAND_AMPERSAND inclusive_or_expression

   58 logical_or_expression: logical_and_expression
   59                      | logical_or_expression PIPE_PIPE logical_and_expression

   60 conditional_expression: logical_or_expression
   61                       | logical_or_expression INTERROGACAO expression DOIS_PONTOS conditional_expression

   62 assignment_expression: conditional_expression
   63                      | unary_expression assignment_operator assignment_expression

   64 assignment_operator: IGUAL
   65                    | ASTERISCO_IGUAL
   66                    | BARRA_IGUAL
   67                    | PORCENTAGEM_IGUAL
   68                    | MAIS_IGUAL
   69                    | MENOS_IGUAL
   70                    | MENOR_MENOR_IGUAL
   71                    | MAIOR_MAIOR_IGUAL
   72                    | AMPERSAND_IGUAL
   73                    | CIRCUNFLEXO_IGUAL
   74                    | PIPE_IGUAL

   75 expression: assignment_expression
   76           | expression VIRGULA assignment_expression

   77 constant_expression: conditional_expression

   78 declaration: declaration_specifiers PONTO_VIRGULA
   79            | declaration_specifiers init_declarator_list PONTO_VIRGULA

   80 declaration_specifiers: storage_class_specifier
   81                       | storage_class_specifier declaration_specifiers
   82                       | type_specifier
   83                       | type_specifier declaration_specifiers
   84                       | type_qualifier
   85                       | type_qualifier declaration_specifiers
   86                       | function_specifier
   87                       | function_specifier declaration_specifiers

   88 init_declarator_list: init_declarator
   89                     | init_declarator_list VIRGULA init_declarator

   90 init_declarator: declarator
   91                | declarator IGUAL initializer

   92 storage_class_specifier: TYPEDEF
   93                        | EXTERN
   94                        | STATIC
   95                        | AUTO
   96                        | REGISTER

   97 type_specifier: VOID
   98               | CHAR
   99               | SHORT
  100               | INT
  101               | LONG
  102               | FLOAT
  103               | DOUBLE
  104               | SIGNED
  105               | UNSIGNED
  106               | BOOL
  107               | struct_or_union_specifier
  108               | enum_specifier
  109               | TYPE_NAME

  110 struct_or_union_specifier: struct_or_union IDENTIFIER ABRE_CHAVES struct_declaration_list FECHA_CHAVES
  111                          | struct_or_union ABRE_CHAVES struct_declaration_list FECHA_CHAVES
  112                          | struct_or_union IDENTIFIER

  113 struct_or_union: STRUCT
  114                | UNION

  115 struct_declaration_list: struct_declaration
  116                        | struct_declaration_list struct_declaration

  117 struct_declaration: specifier_qualifier_list struct_declarator_list PONTO_VIRGULA

  118 specifier_qualifier_list: type_specifier specifier_qualifier_list
  119                         | type_specifier
  120                         | type_qualifier specifier_qualifier_list
  121                         | type_qualifier

  122 struct_declarator_list: struct_declarator
  123                       | struct_declarator_list VIRGULA struct_declarator

  124 struct_declarator: declarator
  125                  | DOIS_PONTOS constant_expression
  126                  | declarator DOIS_PONTOS constant_expression

  127 enum_specifier: ENUM ABRE_CHAVES enumerator_list FECHA_CHAVES
  128               | ENUM IDENTIFIER ABRE_CHAVES enumerator_list FECHA_CHAVES
  129               | ENUM ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  130               | ENUM IDENTIFIER ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  131               | ENUM IDENTIFIER

  132 enumerator_list: enumerator
  133                | enumerator_list VIRGULA enumerator

  134 enumerator: IDENTIFIER
  135           | IDENTIFIER IGUAL constant_expression

  136 type_qualifier: CONST
  137               | RESTRICT
  138               | VOLATILE

  139 function_specifier: INLINE

  140 declarator: pointer direct_declarator
  141           | direct_declarator

  142 direct_declarator: IDENTIFIER
  143                  | IDENTIFIER ABRE_COLCHETES CONSTANT FECHA_COLCHETES
  144                  | IDENTIFIER ABRE_COLCHETES CONSTANT FECHA_COLCHETES ABRE_COLCHETES CONSTANT FECHA_COLCHETES

  145 pointer: ASTERISCO
  146        | ASTERISCO type_qualifier_list
  147        | ASTERISCO pointer
  148        | ASTERISCO type_qualifier_list pointer

  149 type_qualifier_list: type_qualifier
  150                    | type_qualifier_list type_qualifier

  151 type_name: specifier_qualifier_list
  152          | specifier_qualifier_list abstract_declarator

  153 abstract_declarator: pointer
  154                    | direct_abstract_declarator
  155                    | pointer direct_abstract_declarator

  156 direct_abstract_declarator: ABRE_PARENTESES abstract_declarator FECHA_PARENTESES
  157                           | ABRE_COLCHETES FECHA_COLCHETES
  158                           | ABRE_COLCHETES assignment_expression FECHA_COLCHETES
  159                           | direct_abstract_declarator ABRE_COLCHETES FECHA_COLCHETES
  160                           | direct_abstract_declarator ABRE_COLCHETES assignment_expression FECHA_COLCHETES
  161                           | ABRE_COLCHETES ASTERISCO FECHA_COLCHETES
  162                           | direct_abstract_declarator ABRE_COLCHETES ASTERISCO FECHA_COLCHETES
  163                           | ABRE_PARENTESES FECHA_PARENTESES

  164 initializer: assignment_expression
  165            | ABRE_CHAVES initializer_list FECHA_CHAVES

  166 initializer_list: initializer
  167                 | designation initializer
  168                 | initializer_list VIRGULA initializer
  169                 | initializer_list VIRGULA designation initializer

  170 designation: designator_list IGUAL

  171 designator_list: designator
  172                | designator_list designator

  173 designator: ABRE_COLCHETES constant_expression FECHA_COLCHETES
  174           | PONTO IDENTIFIER

  175 statement: labeled_statement
  176          | compound_statement
  177          | expression_statement
  178          | selection_statement
  179          | iteration_statement
  180          | jump_statement
  181          | breakp_statement

  182 breakp_statement: BREAKP PONTO_VIRGULA

  183 in_statement: IN ABRE_PARENTESES assignment_expression FECHA_PARENTESES

  184 out_statement: OUT ABRE_PARENTESES assignment_expression VIRGULA assignment_expression FECHA_PARENTESES

  185 labeled_statement: IDENTIFIER DOIS_PONTOS statement
  186                  | CASE constant_expression begin_case statement
  187                  | DEFAULT begin_case statement

  188 begin_case: DOIS_PONTOS

  189 compound_statement: ABRE_CHAVES FECHA_CHAVES
  190                   | ABRE_CHAVES block_item_list FECHA_CHAVES

  191 block_item_list: block_item
  192                | block_item_list block_item

  193 block_item: declaration
  194           | statement

  195 expression_statement: PONTO_VIRGULA
  196                     | expression PONTO_VIRGULA

  197 selection_statement: IF ABRE_PARENTESES expression begin_labeled statement
  198                    | IF ABRE_PARENTESES expression begin_labeled statement begin_else statement
  199                    | SWITCH ABRE_PARENTESES expression begin_switch statement

  200 begin_switch: FECHA_PARENTESES

  201 begin_labeled: FECHA_PARENTESES

  202 begin_else: ELSE

  203 iteration_statement: begin_while ABRE_PARENTESES expression begin_labeled2 statement
  204                    | DO statement WHILE ABRE_PARENTESES expression FECHA_PARENTESES PONTO_VIRGULA
  205                    | begin_for ABRE_PARENTESES begin_labeled4 begin_labeled3 begin_labeled5 statement
  206                    | begin_for ABRE_PARENTESES begin_labeled4 begin_labeled3 expression begin_labeled5 statement

  207 begin_labeled5: FECHA_PARENTESES

  208 begin_while: WHILE

  209 begin_labeled2: FECHA_PARENTESES

  210 begin_for: FOR

  211 begin_labeled3: expression_statement

  212 begin_labeled4: expression_statement

  213 jump_statement: GOTO IDENTIFIER PONTO_VIRGULA
  214               | CONTINUE PONTO_VIRGULA
  215               | BREAK PONTO_VIRGULA
  216               | RETURN PONTO_VIRGULA
  217               | RETURN expression PONTO_VIRGULA

  218 translation_unit: external_declaration
  219                 | translation_unit external_declaration

  220 external_declaration: function_definition
  221                     | declaration

  222 function_definition: declaration_specifiers begin_funcao begin_parametro opt_parametros end_parametro compound_statement

  223 opt_parametros: %empty
  224               | parameter_list

  225 parameter_list: parameter_declaration
  226               | parameter_list VIRGULA parameter_declaration

  227 parameter_declaration: type_specifier pointer direct_declarator
  228                      | type_specifier direct_declarator

  229 begin_funcao: IDENTIFIER

  230 begin_parametro: ABRE_PARENTESES

  231 end_parametro: FECHA_PARENTESES


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING_LITERAL (258) 5
IDENTIFIER (259) 1 7 8 9 10 12 110 112 128 130 131 134 135 142 143
    144 174 185 213 229
CONSTANT (260) 4 143 144
MENOR (261) 43
MAIOR (262) 44
MENOR_IGUAL (263) 45
MAIOR_IGUAL (264) 46
IGUAL_IGUAL (265) 48
EXCLAMACAO_IGUAL (266) 49
AMPERSAND_AMPERSAND (267) 57
PIPE_PIPE (268) 59
EXCLAMACAO (269) 29
IGUAL (270) 64 91 135 170
MAIS_IGUAL (271) 68
MENOS_IGUAL (272) 69
ASTERISCO_IGUAL (273) 65
BARRA_IGUAL (274) 66
MAIOR_MAIOR_IGUAL (275) 71
MENOR_MENOR_IGUAL (276) 70
PORCENTAGEM_IGUAL (277) 67
CIRCUNFLEXO_IGUAL (278) 73
AMPERSAND_IGUAL (279) 72
PIPE_IGUAL (280) 74
VOID (281) 97
INT (282) 100
CHAR (283) 98
BOOL (284) 106
IF (285) 197 198
ELSE (286) 202
FOR (287) 210
WHILE (288) 204 208
BREAK (289) 215
SWITCH (290) 199
CASE (291) 186
CONTINUE (292) 214
INCLUDE (293)
GOTO (294) 213
RETURN (295) 216 217
CONST (296) 136
DEFAULT (297) 187
EXTERN (298) 93
STATIC (299) 94
MAIS (300) 26 37
MENOS (301) 27 38
MAIS_MAIS (302) 13 19
MENOS_MENOS (303) 14 20
ASTERISCO (304) 25 33 145 146 147 148 161 162
BARRA (305) 34
PORCENTAGEM (306) 35
CIRCUNFLEXO (307) 53
DOIS_PONTOS (308) 61 125 126 185 188
VIRGULA (309) 17 76 89 123 129 130 133 168 169 184 226
PONTO_VIRGULA (310) 78 79 117 182 195 196 204 213 214 215 216 217
INTERROGACAO (311) 61
SUSTENIDO (312)
ABRE_COLCHETES (313) 9 10 143 144 157 158 159 160 161 162 173
FECHA_COLCHETES (314) 9 10 143 144 157 158 159 160 161 162 173
ABRE_PARENTESES (315) 6 7 8 15 23 31 156 163 183 184 197 198 199 203
    204 205 206 230
FECHA_PARENTESES (316) 6 7 8 15 23 31 156 163 183 184 200 201 204 207
    209 231
ABRE_CHAVES (317) 15 110 111 127 128 129 130 165 189 190
FECHA_CHAVES (318) 15 110 111 127 128 129 130 165 189 190
MENOR_MENOR (319) 40
MAIOR_MAIOR (320) 41
PIPE (321) 55
AMPERSAND (322) 24 51
TIL (323) 28
BREAKP (324) 182
OUT (325) 184
IN (326) 183
UNSIGNED (327) 105
UNION (328) 114
TYPE_NAME (329) 109
TYPEDEF (330) 92
STRUCT (331) 113
SIZEOF (332) 22 23
SIGNED (333) 104
RESTRICT (334) 137
REGISTER (335) 96
INLINE (336) 139
IMAGINARY (337)
ELLIPSIS (338)
DO (339) 204
COMPLEX (340)
AUTO (341) 95
VOLATILE (342) 138
ENUM (343) 127 128 129 130 131
PONTO (344) 12 174
DOUBLE (345) 103
SHORT (346) 99
LONG (347) 101
FLOAT (348) 102


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
primary_expression (95)
    on left: 1 2 3 4 5 6 7 8 9 10, on right: 11
postfix_expression (96)
    on left: 11 12 13 14 15, on right: 12 13 14 18
argument_expression_list (97)
    on left: 16 17, on right: 8 17
unary_expression (98)
    on left: 18 19 20 21 22 23, on right: 19 20 22 30 63
unary_operator (99)
    on left: 24 25 26 27 28 29, on right: 21
cast_expression (100)
    on left: 30 31, on right: 21 31 32 33 34 35
multiplicative_expression (101)
    on left: 32 33 34 35, on right: 33 34 35 36 37 38
additive_expression (102)
    on left: 36 37 38, on right: 37 38 39 40 41
shift_expression (103)
    on left: 39 40 41, on right: 40 41 42 43 44 45 46
relational_expression (104)
    on left: 42 43 44 45 46, on right: 43 44 45 46 47 48 49
equality_expression (105)
    on left: 47 48 49, on right: 48 49 50 51
and_expression (106)
    on left: 50 51, on right: 51 52 53
exclusive_or_expression (107)
    on left: 52 53, on right: 53 54 55
inclusive_or_expression (108)
    on left: 54 55, on right: 55 56 57
logical_and_expression (109)
    on left: 56 57, on right: 57 58 59
logical_or_expression (110)
    on left: 58 59, on right: 59 60 61
conditional_expression (111)
    on left: 60 61, on right: 61 62 77
assignment_expression (112)
    on left: 62 63, on right: 16 17 63 75 76 158 160 164 183 184
assignment_operator (113)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 63
expression (114)
    on left: 75 76, on right: 6 9 10 61 76 196 197 198 199 203 204
    206 217
constant_expression (115)
    on left: 77, on right: 125 126 135 173 186
declaration (116)
    on left: 78 79, on right: 193 221
declaration_specifiers (117)
    on left: 80 81 82 83 84 85 86 87, on right: 78 79 81 83 85 87 222
init_declarator_list (118)
    on left: 88 89, on right: 79 89
init_declarator (119)
    on left: 90 91, on right: 88 89
storage_class_specifier (120)
    on left: 92 93 94 95 96, on right: 80 81
type_specifier (121)
    on left: 97 98 99 100 101 102 103 104 105 106 107 108 109, on right:
    82 83 118 119 227 228
struct_or_union_specifier (122)
    on left: 110 111 112, on right: 107
struct_or_union (123)
    on left: 113 114, on right: 110 111 112
struct_declaration_list (124)
    on left: 115 116, on right: 110 111 116
struct_declaration (125)
    on left: 117, on right: 115 116
specifier_qualifier_list (126)
    on left: 118 119 120 121, on right: 117 118 120 151 152
struct_declarator_list (127)
    on left: 122 123, on right: 117 123
struct_declarator (128)
    on left: 124 125 126, on right: 122 123
enum_specifier (129)
    on left: 127 128 129 130 131, on right: 108
enumerator_list (130)
    on left: 132 133, on right: 127 128 129 130 133
enumerator (131)
    on left: 134 135, on right: 132 133
type_qualifier (132)
    on left: 136 137 138, on right: 84 85 120 121 149 150
function_specifier (133)
    on left: 139, on right: 86 87
declarator (134)
    on left: 140 141, on right: 90 91 124 126
direct_declarator (135)
    on left: 142 143 144, on right: 140 141 227 228
pointer (136)
    on left: 145 146 147 148, on right: 140 147 148 153 155 227
type_qualifier_list (137)
    on left: 149 150, on right: 146 148 150
type_name (138)
    on left: 151 152, on right: 15 23 31
abstract_declarator (139)
    on left: 153 154 155, on right: 152 156
direct_abstract_declarator (140)
    on left: 156 157 158 159 160 161 162 163, on right: 154 155 159
    160 162
initializer (141)
    on left: 164 165, on right: 91 166 167 168 169
initializer_list (142)
    on left: 166 167 168 169, on right: 15 165 168 169
designation (143)
    on left: 170, on right: 167 169
designator_list (144)
    on left: 171 172, on right: 170 172
designator (145)
    on left: 173 174, on right: 171 172
statement (146)
    on left: 175 176 177 178 179 180 181, on right: 185 186 187 194
    197 198 199 203 204 205 206
breakp_statement (147)
    on left: 182, on right: 181
in_statement (148)
    on left: 183, on right: 2
out_statement (149)
    on left: 184, on right: 3
labeled_statement (150)
    on left: 185 186 187, on right: 175
begin_case (151)
    on left: 188, on right: 186 187
compound_statement (152)
    on left: 189 190, on right: 176 222
block_item_list (153)
    on left: 191 192, on right: 190 192
block_item (154)
    on left: 193 194, on right: 191 192
expression_statement (155)
    on left: 195 196, on right: 177 211 212
selection_statement (156)
    on left: 197 198 199, on right: 178
begin_switch (157)
    on left: 200, on right: 199
begin_labeled (158)
    on left: 201, on right: 197 198
begin_else (159)
    on left: 202, on right: 198
iteration_statement (160)
    on left: 203 204 205 206, on right: 179
begin_labeled5 (161)
    on left: 207, on right: 205 206
begin_while (162)
    on left: 208, on right: 203
begin_labeled2 (163)
    on left: 209, on right: 203
begin_for (164)
    on left: 210, on right: 205 206
begin_labeled3 (165)
    on left: 211, on right: 205 206
begin_labeled4 (166)
    on left: 212, on right: 205 206
jump_statement (167)
    on left: 213 214 215 216 217, on right: 180
translation_unit (168)
    on left: 218 219, on right: 0 219
external_declaration (169)
    on left: 220 221, on right: 218 219
function_definition (170)
    on left: 222, on right: 220
opt_parametros (171)
    on left: 223 224, on right: 222
parameter_list (172)
    on left: 225 226, on right: 224 226
parameter_declaration (173)
    on left: 227 228, on right: 225 226
begin_funcao (174)
    on left: 229, on right: 222
begin_parametro (175)
    on left: 230, on right: 222
end_parametro (176)
    on left: 231, on right: 222


State 0

    0 $accept: . translation_unit $end

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35


State 1

   97 type_specifier: VOID .

    $default  reduce using rule 97 (type_specifier)


State 2

  100 type_specifier: INT .

    $default  reduce using rule 100 (type_specifier)


State 3

   98 type_specifier: CHAR .

    $default  reduce using rule 98 (type_specifier)


State 4

  106 type_specifier: BOOL .

    $default  reduce using rule 106 (type_specifier)


State 5

  136 type_qualifier: CONST .

    $default  reduce using rule 136 (type_qualifier)


State 6

   93 storage_class_specifier: EXTERN .

    $default  reduce using rule 93 (storage_class_specifier)


State 7

   94 storage_class_specifier: STATIC .

    $default  reduce using rule 94 (storage_class_specifier)


State 8

  105 type_specifier: UNSIGNED .

    $default  reduce using rule 105 (type_specifier)


State 9

  114 struct_or_union: UNION .

    $default  reduce using rule 114 (struct_or_union)


State 10

  109 type_specifier: TYPE_NAME .

    $default  reduce using rule 109 (type_specifier)


State 11

   92 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 92 (storage_class_specifier)


State 12

  113 struct_or_union: STRUCT .

    $default  reduce using rule 113 (struct_or_union)


State 13

  104 type_specifier: SIGNED .

    $default  reduce using rule 104 (type_specifier)


State 14

  137 type_qualifier: RESTRICT .

    $default  reduce using rule 137 (type_qualifier)


State 15

   96 storage_class_specifier: REGISTER .

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  139 function_specifier: INLINE .

    $default  reduce using rule 139 (function_specifier)


State 17

   95 storage_class_specifier: AUTO .

    $default  reduce using rule 95 (storage_class_specifier)


State 18

  138 type_qualifier: VOLATILE .

    $default  reduce using rule 138 (type_qualifier)


State 19

  127 enum_specifier: ENUM . ABRE_CHAVES enumerator_list FECHA_CHAVES
  128               | ENUM . IDENTIFIER ABRE_CHAVES enumerator_list FECHA_CHAVES
  129               | ENUM . ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  130               | ENUM . IDENTIFIER ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  131               | ENUM . IDENTIFIER

    IDENTIFIER   shift, and go to state 36
    ABRE_CHAVES  shift, and go to state 37


State 20

  103 type_specifier: DOUBLE .

    $default  reduce using rule 103 (type_specifier)


State 21

   99 type_specifier: SHORT .

    $default  reduce using rule 99 (type_specifier)


State 22

  101 type_specifier: LONG .

    $default  reduce using rule 101 (type_specifier)


State 23

  102 type_specifier: FLOAT .

    $default  reduce using rule 102 (type_specifier)


State 24

  221 external_declaration: declaration .

    $default  reduce using rule 221 (external_declaration)


State 25

   78 declaration: declaration_specifiers . PONTO_VIRGULA
   79            | declaration_specifiers . init_declarator_list PONTO_VIRGULA
  222 function_definition: declaration_specifiers . begin_funcao begin_parametro opt_parametros end_parametro compound_statement

    IDENTIFIER     shift, and go to state 38
    ASTERISCO      shift, and go to state 39
    PONTO_VIRGULA  shift, and go to state 40

    init_declarator_list  go to state 41
    init_declarator       go to state 42
    declarator            go to state 43
    direct_declarator     go to state 44
    pointer               go to state 45
    begin_funcao          go to state 46


State 26

   80 declaration_specifiers: storage_class_specifier .
   81                       | storage_class_specifier . declaration_specifiers

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    $default  reduce using rule 80 (declaration_specifiers)

    declaration_specifiers     go to state 47
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32


State 27

   82 declaration_specifiers: type_specifier .
   83                       | type_specifier . declaration_specifiers

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    $default  reduce using rule 82 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32


State 28

  107 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 107 (type_specifier)


State 29

  110 struct_or_union_specifier: struct_or_union . IDENTIFIER ABRE_CHAVES struct_declaration_list FECHA_CHAVES
  111                          | struct_or_union . ABRE_CHAVES struct_declaration_list FECHA_CHAVES
  112                          | struct_or_union . IDENTIFIER

    IDENTIFIER   shift, and go to state 49
    ABRE_CHAVES  shift, and go to state 50


State 30

  108 type_specifier: enum_specifier .

    $default  reduce using rule 108 (type_specifier)


State 31

   84 declaration_specifiers: type_qualifier .
   85                       | type_qualifier . declaration_specifiers

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32


State 32

   86 declaration_specifiers: function_specifier .
   87                       | function_specifier . declaration_specifiers

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32


State 33

    0 $accept: translation_unit . $end
  219 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 53
    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    external_declaration       go to state 54
    function_definition        go to state 35


State 34

  218 translation_unit: external_declaration .

    $default  reduce using rule 218 (translation_unit)


State 35

  220 external_declaration: function_definition .

    $default  reduce using rule 220 (external_declaration)


State 36

  128 enum_specifier: ENUM IDENTIFIER . ABRE_CHAVES enumerator_list FECHA_CHAVES
  130               | ENUM IDENTIFIER . ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  131               | ENUM IDENTIFIER .

    ABRE_CHAVES  shift, and go to state 55

    $default  reduce using rule 131 (enum_specifier)


State 37

  127 enum_specifier: ENUM ABRE_CHAVES . enumerator_list FECHA_CHAVES
  129               | ENUM ABRE_CHAVES . enumerator_list VIRGULA FECHA_CHAVES

    IDENTIFIER  shift, and go to state 56

    enumerator_list  go to state 57
    enumerator       go to state 58


State 38

  142 direct_declarator: IDENTIFIER .
  143                  | IDENTIFIER . ABRE_COLCHETES CONSTANT FECHA_COLCHETES
  144                  | IDENTIFIER . ABRE_COLCHETES CONSTANT FECHA_COLCHETES ABRE_COLCHETES CONSTANT FECHA_COLCHETES
  229 begin_funcao: IDENTIFIER .

    ABRE_COLCHETES  shift, and go to state 59

    ABRE_PARENTESES  reduce using rule 229 (begin_funcao)
    $default         reduce using rule 142 (direct_declarator)

